re-add overflow:hidden to editor-container to fix scrolling issue

--- a/web/experimental/styles.scss
+++ b/web/experimental/styles.scss
@@ -231,6 +231,7 @@ body {
 
 #editor-container {
   flex: 1;
+  overflow: hidden;
 }
 
 #tab-container {
